assignments/termproject/css/small.css
/* CIT 230 Term Project CSS */

/* * is a wildcard referring to all elements. */
* { margin: 0; box-sizing: border-box; } 

body {
    background-color: #ccdbd9;
}
/* general style h1, h2, etc */
h1, h2, h3, h4, h5, h6 {
    font-family: 'Buenard', serif;
    text-align: center;
    text-shadow: 1px 1px 2px white;
    color: #768e8b;
}

p {
    text-align: left;
    font-family: 'Raleway', sans-serif;
    font-size: .9rem;
    color: #333736;
}

li {
    list-style-type: none;
    font-family: 'Cabin', sans-serif;
}

/* styling header */
#headerContainer {
    display: flex;
    justify-content: space-evenly;
    width: 100%;
	margin: 0 auto;
	background-color: #87768e;
	box-shadow: 0 0 30px #777;
    padding: 2%;
}

.logo {
    margin-left: 2%;
}

/* styling contact section */

#contact {
    margin-right: 2%;
}

#contact h4 {
    text-align: right;
    color: #ccdbd9;
    text-shadow: none;
}

/* nav hamburger button styling */

nav button {
    text-align: center;
    margin: .2rem 2%;
    background-color: transparent;
    border: none;
    font-size: 1.6rem;
    color: #87768e;
}

/* styling navigation menu */

.navContainer {
    display: flex;
    flex-direction: column;
    background-color: white;
    font-family: 'Cabin', sans-serif;
    color: #87768e;
}

.navContainer ul  {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.navContainer li {
    vertical-align: middle;
    font-size: 1em;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    padding-left: .8em;
    padding-right: .8em;
}

.navContainer a {
    color: #87768e;
    padding: .3rem 2%;
    text-align: center;
    text-decoration: none;
    display: block;
    max-width: 400px;
}

nav .selected {
    background-color: #e1b3a5;
    text-shadow: 1px 1px 2px #ffffff;
}

nav ul li a:hover {
    background-color: #768e8b;
    color: white;
    padding: .3rem 2%;
}

/* functionality of hamburger icon */
nav ul.hide {
    display: none;
}

/* hide vertical hero image in mobile view */

.heroTabletView {
    display: none;
}

/* main style icons and descriptions */

span#callToAction {
    position: fixed;
    right: 0;
    top: 38%;
    width: 20%;
    padding: .8%;
    background-color: #768e8b;
    box-shadow: 0 0 20px #777;
}

#callToAction a {
    text-align: left;
    color: white;
    font-family: 'Cabin', sans-serif;
    text-decoration: none;
    text-shadow: 1px 1px 2px #333736;
}

main h1 {
    padding: 2% 0;
    margin: 0;
}

main .hero {
    margin-bottom: 2%;
}

.mainContainer {
    display: flex;
    flex-direction: column;
    margin: 3% auto;
}

.icon img {
    margin-left: auto;
    margin-right: auto;
    padding: 1% 0;
    display: block;
}

.description p {
    margin: 2% 8%;
    padding: 4%;
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: .3rem;
}

.description a {
    text-decoration: none;
    color: #768e8b;
    text-shadow: 1px 1px 2px white;
}

/* trying the clearfix element to see if it helps with the floats */
.clearfix::after {
    content: "";
    clear: both;
    display: table;
}

/* footer */

footer {
    width: 100%;
    display: inline-block;
    background-color: #87768e;
    clear: both;
    padding: 1em 2%;
    font-family: 'Cabin', sans-serif;
}

/* temple page temple info styling */

#temples {
    display: flex;
    flex-direction: column;
    width: 90%;
    margin: 0 auto;
}

#temples article img {
    border-radius: .3rem;
    width: 100%;
    display: block;
    margin: 2% 0;
}

#temples article, div, span {
    width: 95%;
    margin: 0 auto;
}

#temples article h3 {
    margin: .3em 0;
} 

#temples article h5, div h5 {
    text-align: left;
    margin: .4em 0;
}

#temples div {
    background-color: rgba(255, 255, 255, 0.3);
    margin: 2% 2% 6% 2%;
    border-radius: .3rem;
    padding: 1%;
    width: 95%;
}

#temples ul {
    list-style-type: none;
}

#temples div li{
    font-family: 'Cabin', sans-serif;
    font-size: .8rem;
    color: #6a6d6c;
}
#temples p {
    margin: 0 2%;
    padding: 1% 0;
}

/* Reservation form styling */

form {
    display: flex;
    width: 95%;
    flex-direction: column;
}

form fieldset {
    margin: 1rem 2%;
    background-color: rgba(255, 255, 255, 0.3);
    border: 3px solid #87768e;
    border-radius: .3rem;
    padding: .5rem 2%;
}

form legend {
    font-family: 'Buenard', serif;
    color: #333736;
    font-size: 1.2rem;
    padding: 0 .5rem;
    margin: 0 1rem;
    text-shadow: 1px 1px 2px white;
}

form label.top, form div {
    display: block;
    color: #87768e;
    padding-top: .8rem;
    font-family: 'Cabin', serif;
    font-size: 1rem;
}

form label.top input, form label.top select {
    -webkit-appearance: none;
    font-size: 1rem;
    font-family: 'Cabin', sans-serif;
    border: 1px white;
    border-radius: .3rem;
    padding: .75rem;
    width: 100%;
    max-width: 20rem;
    background-color: white;
}

form textarea {
    width: 100%;
    max-width: 50rem;
    font-size: 1rem;
    font-family: 'Buenard', serif;
    text-align: justify;
    background-color: #f3f5e9;
    border: 1px white;
    border-radius: 4px;
}

form label.sbs {
    display: block;
    padding: .75rem 0;
    font-size: 1rem;
    font-family: 'Cabin', sans-serif;
}

#templeLocation, #partyNumber {
    font-size: 1rem;
    font-family: 'Cabin', sans-serif;
}

form input.submitButton {
    border: none;
    background-color: #e1b3a5;
    border-radius: .5rem;
    padding: .75rem 1.5rem;
    margin: 0 0 2rem 2%;
    width: 100%;
    max-width: 20rem;
    font-family: 'Buenard', serif;
    font-size: 1.2rem;
    text-shadow: 2px 2px 4px white;
}

/* thank you message format */

#thanks {
    padding: 4rem 4rem;
}

/* contact page formatting */

#contactContainer {
    display: flex;
    flex-direction: column;
    width: 90%;
    margin: 2% auto;
    padding-top: 2%;
}

#contactContainer iframe {
    display: block;
    width: 95%;
    margin: 0 auto;
    padding: 2% 0;
}

.contactInfo {
    padding-top: 2%;
}

.contactInfo li {
    list-style-type: none;
    font-family: 'Raleway', sans-serif;
    font-size: 1.2rem;
    margin: 0 auto;
    width: 95%;
}

/* services page formatting */

.services {
    display: flex;
    flex-direction: column;
    width: 95%;
    margin: 0 auto;
}

#guests {
    padding: 4%;
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: .3rem;
    color: #6a6d6c;
}

#guests h3 {
    text-align: left;
    padding: 1% 0;
    margin: 2%
}

#guests li {
    line-height: 1rem;
}
/* style home page town summaries for mobile view */

#homeTowns article{
    width: 90%;
    display: flex;
    flex-direction: column;
    border: 1px solid #dddfd4;
    border-radius: .3rem;
    background-color: #c2ca86;
    margin: 5%;
    text-align: center;
    box-shadow: 0 0 30px #777;
    padding-bottom: 1rem;
}

/* general home page styling for all views */

#homeTowns article img {
    width: 100%;
    border-top-left-radius: .3rem;
    border-top-right-radius: .3rem; 
    padding-bottom: 2px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#homeTowns h6 {
    font-family: 'Lato', sans-serif;
    font-size: .7em;
    font-style: italic;
    color: #ee3229;
    text-align: center;
    text-shadow: none;
    padding-top: .3rem;
    padding-bottom: .3rem; 
}

#homeTowns p {
    text-align: center;
    font-family: 'Lato', sans-serif;
    font-size: .9rem;
}

.currentArticles, .contactHome {
    width: 90%;
    display: flex;
    flex-direction: column;
    border: 1px solid #dddfd4;
    border-radius: .3rem;
    background-color: #c2ca86;
    margin: 5%;
    text-align: center;
    box-shadow: 0 0 30px #777;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.contactHome p {
    font-size: .8rem;
    text-align: center;
    padding-top: .3rem;
}

.currentArticles p {
    margin-left: 1%;
    padding-top: .3rem;
    text-shadow: 1px 1px 2px white;
    font-style: italic;
}

.currentArticles a {
    text-decoration: none;
    color: black;
}

/* styling current temp block */
#currenttemp {
    display: none;
    font-family: 'Lato', sans-serif;
    background-color: #231f20;
    opacity: 0.35;
    box-shadow: 2px 2px 30px #f3f5e9;
    padding: .3em .1em;
    color: white;
    margin-left: 4%;
    margin-top: 1.5%;
    margin-bottom: 1.5%;
}

/* styling weather summary image */
.center {
    display: block;
    width: 95%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 2%;
    width: 100%;   
}

/* styling weather summary aside */

#summary {
    width: 20%;
    position: absolute;
    margin-top: 3%;
    margin-left: 3%;
    font-family: 'Lato', sans-serif;
    background-color: #f3f5e9;
    opacity: 0.7;
    box-shadow: 0 0 30px #777;
    padding: 1em .5em;
    border-radius: .3rem;
}

#summary h4 {
    padding: .2em;
    color: #231f20;
    text-align: left;
}

#summary span {
    text-shadow: 1px 1px 2px #777;
    background-color: #f3f5e9;
}

/* credit openweathermap.org format */

#credit p {
    width: 100%;
    font-size: .7rem;
    font-weight: lighter;
    text-align: center;
}

/* 5 day forecast needs to not show in mobile view */

.fiveday {
    display: none;
}

.currenttemp {
    display: none;
}

/* Styling article image */

#townPageArticle img {
    width: 95%;
    margin-left: 2%;
    border-radius: .3rem;
}

/* Styling article */

#townPageArticle {
    width: 95%;
    max-height: 350px;
    overflow: auto;
    background-color: #c2ca86;
    border: 1px solid #dddfd4;
    border-radius: .3rem;
    margin: 2%;
    padding: 1rem 2rem 1rem 2rem;
}

#townPageArticle div p {
    font-family: 'Lato', sans-serif;
    line-height: 1rem;
    margin: .5em;
}

#townPageArticle div h2 {
    margin-bottom: .5rem;
}

#townPageArticle div h4 {
    padding: 1rem 0;
}

#townPageArticle h5 {
    text-align: left;
    text-shadow: none;
    margin: .5rem 0; 
}

/* style upcoming events */

#events {
    width: 60%;
    margin-left: auto;
    margin-right: auto;
    box-shadow: 0 0 30px #777;
    padding: 1.5%;
    border-radius: .3em;
}

#events h3 {
    padding-bottom: 1%;
}

#upcoming ul {
    list-style-type: none;
}

#upcoming li {
    font-family: 'Lato', sans-serif;
    text-align: center;
}

